samples/_failures_safe/1761608926_a200f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b92508d.c: In function ‘handle_event’:
./samples/SAFE/__tmp_8b92508d.c:147:13: error: expected declaration or statement at end of input
  147 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_8b92508d.c:147:13: error: expected declaration or statement at end of input
